add: header structure

--- a/index.html
+++ b/index.html
@@ -9,9 +9,31 @@
     <link rel="stylesheet" href="./css/style.css">
     <!-- link reset css -->
     <link rel="stylesheet" href="./css/reset.css">
-    <title>Document</title>
+    <title>Boolean</title>
 </head>
 <body>
-    
+    <header>
+        <nav class="flex">
+            <figure class="logo">
+                <img  width="100%" alt="logo">
+            </figure>
+
+            <div class="menu">
+                <ul> menu
+                    <!-- <li><a href="">link</a></li>
+                    <li><a href="">link</a></li>
+                    <li><a href="">link</a></li> -->
+                </ul>
+            </div>
+
+            <div class="menu__icon">
+                <ul> icone
+                    <!-- <li><a href="">link</a></li>
+                    <li><a href="">link</a></li>
+                    <li><a href="">link</a></li> -->
+                </ul>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
