add: main structure

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- link debug css -->
-    <!-- <link rel="stylesheet" href="./css/debug.css"> -->
+    <link rel="stylesheet" href="./css/debug.css">
     <!-- link esterno css -->
     <link rel="stylesheet" href="./css/style.css">
     <!-- link reset css -->
@@ -12,12 +12,14 @@
     <title>Boolean</title>
 </head>
 <body>
+    <!-- start header -->
     <header>
-        <nav class="flex">
+        <nav class="container-80 flex">
             <figure class="logo">
                 <img  width="100%" alt="logo">
             </figure>
 
+            <!-- links menu -->
             <div class="menu">
                 <ul> menu
                     <!-- <li><a href="">link</a></li>
@@ -26,6 +28,7 @@
                 </ul>
             </div>
 
+            <!-- links menu icons -->
             <div class="menu__icon">
                 <ul> icone
                     <!-- <li><a href="">link</a></li>
@@ -35,5 +38,17 @@
             </div>
         </nav>
     </header>
+    <!-- start main -->
+    <main>
+        <section class="container-80 flex">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+
+        </section>
+    </main>
 </body>
 </html>
