add: footer structure

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- link debug css -->
-    <link rel="stylesheet" href="./css/debug.css">
+    <!-- <link rel="stylesheet" href="./css/debug.css"> -->
     <!-- link esterno css -->
     <link rel="stylesheet" href="./css/style.css">
     <!-- link reset css -->
@@ -50,5 +50,25 @@
 
         </section>
     </main>
+    <footer>
+        <div class="container-80 flex">
+            <div>
+                <p>
+                    testo
+                </p>
+                <p>
+                    testo
+                </p>
+            </div>
+            <div>
+                <p>
+                    testo
+                </p>
+                <div>
+                    icone
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
