--- a/index.html
+++ b/index.html
@@ -146,6 +146,90 @@
 
 
         </section>
+        <!-- card 4 -->
+        <section class="container-80 flex">
+            <div class="card">
+                <div class="item">
+                    <figure class="img-1">
+                        <img width="100%" src="./img/4.webp" alt="">
+                    </figure>
+                    <figure class="img-2" >
+                        <img width="100%" src="./img/4b.webp" alt="">
+                    </figure>
+                    <span class="discount">-50%</span>
+                    <span class="target">Sostenibilita</span>
+                    <span class="card__icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                            <path d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z"/>
+                        </svg>
+                    </span>
+                </div>
+
+                <div>
+                    <p>levi's</p>
+                    <h4>RELAXED FIT TEE UNISEX</h4>
+                    <span>14,99€</span>
+                    <span>29,99€</span>
+                </div>
+
+            </div>
+
+            <div class="card">
+                <div class="item">
+                    <figure class="img-1">
+                        <img width="100%" src="./img/5.webp" alt="">
+                    </figure>
+                    <figure class="img-2" >
+                        <img width="100%" src="./img/5b.webp" alt="">
+                    </figure>
+                    <span class="discount">-30%</span>
+                    <!-- <span class="target">Sostenibilita</span> -->
+                    <span class="card__icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                            <path d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z"/>
+                        </svg>
+                    </span>
+                </div>
+
+                <div>
+                    <p>Guess</p>
+                    <h4>ROSES TEE</h4>
+                    <span>14,99€</span>
+                    <span>29,99€</span>
+                </div>
+
+            </div>
+
+            <div class="card">
+                <div class="item">
+                    <figure class="img-1">
+                        <img width="100%" src="./img/6.webp" alt="">
+                    </figure>
+                    <figure class="img-2" >
+                        <img width="100%" src="./img/6b.webp" alt="">
+                    </figure>
+                    <!-- <span class="discount">-30%</span> -->
+                    <span class="target">Sostenibilita</span>
+                    <span class="card__icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                            <path d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z"/>
+                        </svg>
+                    </span>
+                </div>
+
+                <div>
+                    <p>Come Zucchero Filato</p>
+                    <h4>VOGLIA DI COLORI PASTELLO</h4>
+                    <span>14,99€</span>
+                    <span>29,99€</span>
+                </div>
+
+            </div>
+
+
+
+        </section>
+
 
     </main>
     <footer>
