--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
     <!-- start main -->
     <main>
         <section class="container-80 flex">
-            <div class="card">
-                <div class="item">
+            <div class="cards">
+                <div class="card">
                     <figure class="img-1">
                         <img width="100%" src="./img/1.webp" alt="">
                     </figure>
@@ -91,8 +91,8 @@
 
             </div>
 
-            <div class="card">
-                <div class="item">
+            <div class="cards">
+                <div class="card">
                     <figure class="img-1">
                         <img width="100%" src="./img/2.webp" alt="">
                     </figure>
@@ -117,8 +117,8 @@
 
             </div>
 
-            <div class="card">
-                <div class="item">
+            <div class="cards">
+                <div class="card">
                     <figure class="img-1">
                         <img width="100%" src="./img/3.webp" alt="">
                     </figure>
@@ -143,13 +143,8 @@
 
             </div>
 
-
-
-        </section>
-        <!-- card 4 -->
-        <section class="container-80 flex">
-            <div class="card">
-                <div class="item">
+            <div class="cards">
+                <div class="card">
                     <figure class="img-1">
                         <img width="100%" src="./img/4.webp" alt="">
                     </figure>
@@ -174,8 +169,8 @@
 
             </div>
 
-            <div class="card">
-                <div class="item">
+            <div class="cards">
+                <div class="card">
                     <figure class="img-1">
                         <img width="100%" src="./img/5.webp" alt="">
                     </figure>
@@ -192,7 +187,7 @@
                 </div>
 
                 <div>
-                    <p>Guess</p>
+                    <span>Guess</span>
                     <h4>ROSES TEE</h4>
                     <span>14,99€</span>
                     <span>29,99€</span>
@@ -200,8 +195,8 @@
 
             </div>
 
-            <div class="card">
-                <div class="item">
+            <div class="cards">
+                <div class="card">
                     <figure class="img-1">
                         <img width="100%" src="./img/6.webp" alt="">
                     </figure>
@@ -225,6 +220,12 @@
                 </div>
 
             </div>
+
+
+        </section>
+        <!-- card 4 -->
+        <section class="container-80 flex">
+
 
 
 
